# qt-library-management

./: .gitignore  CMakeLists.txt  README.md  addbookdialog.cpp  addbookdialog.ui  article.cpp  article.h  book.cpp  book.h  digitalcontent.cpp  digitalcontent.h  historyentry.cpp  historyentry.h  librarydata.h  loan.cpp  loan.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reservation.cpp  reservation.h  resource.cpp  resource.h  scheduledialog.cpp  scheduledialog.h  thesis.cpp  thesis.h  user.cpp  user.h
